<resources>
    <string name="app_name">Counter</string>
    <string name="action_settings">Settings</string>
    <string name="count">Count</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="reset">Reset</string>
    <string name="counter_deleted">Counter removed</string>
    <string name="undo">Undo</string>
    <string name="new_counter">New counter</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="counter_name">Counter name</string>

</resources>
